--- a/Gatsby/package.json
+++ b/Gatsby/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^2.26.1",
+    "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.6.1",
@@ -20,8 +21,10 @@
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-calendly": "^1.3.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.1.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
