--- a/Gatsby/package.json
+++ b/Gatsby/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.26.1",
     "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.5.0",
@@ -13,6 +14,7 @@
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sharp": "^2.8.0",
+    "gatsby-plugin-styled-components": "^3.10.0",
     "gatsby-remark-embed-video": "^3.0.10",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-source-sanity": "^6.0.4",
@@ -21,7 +23,6 @@
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-calendly": "^1.3.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.1.0",
