--- a/Sanity/package.json
+++ b/Sanity/package.json
@@ -16,11 +16,13 @@
   ],
   "dependencies": {
     "@sanity/base": "^2.0.9",
+    "@sanity/client": "^2.2.6",
     "@sanity/components": "^2.0.9",
     "@sanity/core": "^2.0.9",
     "@sanity/default-layout": "^2.0.9",
     "@sanity/default-login": "^2.0.9",
     "@sanity/desk-tool": "^2.0.9",
+    "@sanity/image-url": "^0.140.22",
     "@sanity/vision": "^2.0.9",
     "prop-types": "^15.7",
     "react": "^17.0",
